--- a/alpha/style.css
+++ b/alpha/style.css
@@ -102,7 +102,7 @@ nav{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    padding-top:10%;
+    margin-top:-7%;
 }
 
 
@@ -147,6 +147,7 @@ nav{
 
 .cloud{
     position:relative;
+    display: inline-block;
     background-color: #1E90FF;
     border-radius: 100px;
     width:30vw;
@@ -154,11 +155,10 @@ nav{
     min-width: 430px;
     min-height: 150px;
     margin-top:300px;
-    box-shadow: 0 0 10px var(#fff), inset -10px -10px 30px var(#ccc);
 }
 
 #circle1{
-    position:fixed;
+    position:relative;
     background-color: #1E90FF;
     width:15vw;
     height:15vw;
@@ -170,14 +170,14 @@ nav{
 }
 
 #circle2{
-    position:fixed;
+    position:relative;
     background-color: #1E90FF;
     width:10vw;
     height:10vw;
     min-width:150px;
     min-height:150px;
     border-radius: 50%;
-    margin-top:-20%;
+    margin-top:-40%;
     margin-left:50%;
 }
 
