--- a/alpha/style.css
+++ b/alpha/style.css
@@ -169,6 +169,16 @@ footer{
     grid-row:1;
 }
 
+#socials:nth-child(1){
+    grid-column:1/13;
+    grid-row:2;
+}
+
+#socials:nth-child(2){
+    grid-column:1/13;
+    grid-row:3;
+}
+
 /* small tablet styles */
 
 @media screen and (min-width: 620px){
